<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffe4c4"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/hello_world"
                android:textSize="18dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Age:              " />

                <EditText
                    android:id="@+id/editTextAge"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:ems="10" >
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender:      " />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />
                    <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
                </RadioGroup>

                
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/spinnerCP"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.51"
                    android:entries="@array/chest_pain"
                    android:prompt="@string/cp_prompt" />

                <Spinner
                    android:id="@+id/spinnerEG"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:entries="@array/eg"
                    android:prompt="@string/eg_prompt" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewBloodPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="Blood Pressure      :" />

                <EditText
                    android:id="@+id/editTextBloodPressure"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewCholes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.42"
                    android:text="cholestoral (mg/dl)" />

                <EditText
                    android:id="@+id/editTextCholes"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.44"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewSugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.14"
                    android:text="blood sugar>120 mg/dl " />

                

                <RadioGroup
                    android:id="@+id/radioOptionSugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonSugarYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes" />
                    <RadioButton
                    android:id="@+id/radioButtonSugarNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.21"
                    android:text="No" />
                </RadioGroup>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewOldPeak"
                    android:layout_width="50dp"
                    android:layout_height="63dp"
                    android:layout_weight="0.56"
                    android:text="oldpeak(ST depression induced by exercise relative to rest)" />

                <EditText
                    android:id="@+id/editTextOldPeak"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.12"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewExcer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" exercise induced angina" />

                <RadioGroup
                    android:id="@+id/radioOptionExcer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonExcerYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="yes" />
                    <RadioButton
                    android:id="@+id/radioButtonExcerNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="no" />
                </RadioGroup>

                

            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewHeart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="Max. Heart Rate" />

                <EditText
                    android:id="@+id/editTextHeart"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.44"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewMajorVessel"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:text="No. of major vessels(0-3)" />

                <EditText
                    android:id="@+id/editTextMajorVessel"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/spinnerSlop"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.51"
                    android:entries="@array/slop"
                    android:prompt="@string/slop_prompt" />

                <Spinner
                    android:id="@+id/spinnerThal"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.36"
                    android:entries="@array/thal"
                    android:prompt="@string/thal_prompt" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Submit" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>